processed/jira/txt/LU/LU-11328.txt
Key:        LU-11328
Summary:    compile error when --disable-lru-resize is used during configure
Link:       https://jira.whamcloud.com/browse/LU-11328
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Dongyang Li
Reporter:   Dongyang Li
Created:    Mon, 3 Sep 2018 07:35:20 +0000
Updated:    Mon, 10 Sep 2018 17:42:03 +0000
Resolved:   Mon, 10 Sep 2018 17:42:03 +0000
Links:      Related: is related to  LU-9019

--- Description ---
CC [M] /root/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.o

/root/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.c:1442:5: error: conflicting types for ‘ldlm_pool_recalc’

 int ldlm_pool_recalc(struct ldlm_pool *pl)

 ^

In file included from /root/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.c:98:0:

/root/lustre-release/lustre/include/lustre_dlm.h:1712:10: note: previous declaration of ‘ldlm_pool_recalc’ was here

 time64_t ldlm_pool_recalc(struct ldlm_pool *pl);

 ^

cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

cc1: all warnings being treated as errors

make[6]: *** [/root/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.o] Error 1

make[5]: *** [/root/lustre-release/lustre/ptlrpc] Error 2

make[4]: *** [/root/lustre-release/lustre] Error 2

make[3]: *** [_module_/root/lustre-release] Error 2

make[3]: Leaving directory `/usr/src/kernels/3.10.0-862.9.1.el7.x86_64'

make[2]: *** [modules] Error 2

make[2]: Leaving directory `/root/lustre-release'

make[1]: *** [all-recursive] Error 1

make[1]: Leaving directory `/root/lustre-release'

make: *** [all] Error 2

--- Comment (pjones, Mon, 10 Sep 2018 17:42:03 +0000) ---
Landed for 2.12

--- Comment (gerrit, Mon, 10 Sep 2018 16:52:34 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/33103/

Subject: LU-11328 ldlm: fix compile problem with --disable-lru-size

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 43e4befc2efa5a1623f4c0981fff67a0e41576aa

--- Comment (gerrit, Mon, 3 Sep 2018 07:39:30 +0000) ---
Li Dongyang (dongyangli@ddn.com) uploaded a new patch: https://review.whamcloud.com/33103

Subject: LU-11328 ldlm: fix compile problem with --disable-lru-size

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 16f03efcf2a2b37eb0c07502f2ea65117c9efe53
